# audio_to_text_converter

./: main.py  pyproject.toml
